add daily skin change
today.php

--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
 		</div>
 		<div align="center" id="divProduct">
 			<ul class="productBox">
-                                <img src="../gallery/gallery-images/20170628144019.jpg">
+                                <img src="gallery/gallery-images/20170628144019.jpg">
 								<br><br><br>
-								<img src="../gallery/gallery-images/20170628143944.jpg">
+								<img src="gallery/gallery-images/20170628143944.jpg">
 								<br><br><br>
-								<img src="../gallery/gallery-images/20170628143952.jpg">
+								<img src="gallery/gallery-images/20170628143952.jpg">
 								<br><br><br>
 								<!--
                                 <img src="index_files/upgade.jpg">
